tests/snapshots/examples_fixtures/performance__complexity_scaling.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/performance/complexity_scaling.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Type Mismatch

I found a type mismatch.

  examples/performance/complexity_scaling.flx:14:44
   |
14 |             bench_list_head(lst, reps - 1, acc + first(lst))
   |                                            ^^^^^^^^^^^^^^^^
   |                                            ---------------- this expression has type `Int`

   |                                            ---------------- this type mismatch is reported here

Note:
  expected type: Option<_>
  found type: Int
  the conflicting types meet at this expression

Help:
  Wrap this value in `Some(...)` or return `None`.
== stdout ==
<not executed>
